# claude-copilot

./: .cnb.yml  .gitignore  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  TODO.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.updater/: latest.json
core/: Cargo.toml
core/src/: auth.rs  file_resource.rs  frontmatter.rs  hooks.rs  lib.rs  mcp.rs  memory.rs  plugins.rs  projects.rs  providers.rs  scopes.rs  sessions.rs  skills.rs  subscription.rs  usage.rs
docs/: 2026-06-19-claude-copilot-desktop-design.md
docs/adr/: 0001-provider-profiles-own-file.md  0002-no-radix-handrolled-ui.md  0003-skill-sources-separate-from-marketplaces.md
docs/superpowers/specs/: 2026-06-19-claude-copilot-desktop-design.md
scripts/: publish-cnb.sh  sync-version.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_cli.rs  lib.rs  main.rs  secrets.rs  state.rs  watchers.rs
src-tauri/src/commands/: auth.rs  files.rs  hooks.rs  mcp.rs  memory.rs  mod.rs  plugins.rs  providers.rs  resources.rs  scopes.rs  sessions.rs  settings.rs  skills.rs  ui.rs  usage.rs
src/components/: AppHeader.tsx  ConnectionsPage.tsx  CreateNameDialog.tsx  HooksPanel.tsx  LastUpdated.tsx  LocaleSwitcher.tsx  McpPanel.tsx  MemoryPanel.tsx  OutputStylesPanel.tsx  PanelHeader.tsx  PluginsPanel.tsx  ProviderActivation.tsx  ProvidersDialog.tsx  ResourceArea.tsx  ResourceDetail.tsx  ResourceList.tsx  ResourcePanel.tsx  ScopeSidebar.tsx  SessionsPanel.tsx  SettingsPanel.tsx  SkillsPanel.tsx  ThemeToggle.tsx  Toaster.tsx  UsagePanel.tsx  WelcomeDialog.tsx
src/components/ui/: Loading.tsx  Modal.tsx  Segmented.tsx  Select.tsx  button.tsx
src/i18n/: en.json  zh-cn.json
src/lib/: i18n.ts  ipc.ts  markdown.ts  notify.ts  relativeTime.ts  signals.ts  theme.ts  toast.ts  updateTimes.ts  updater.ts  useFsRefresh.ts
src/types/: ActiveProvider.ts  AuthMode.ts  AuthStatus.ts  AvailablePlugin.ts  BundledKind.ts  BundledResource.ts  ClaudeSubscriptionQuota.ts  CredentialStatus.ts  ExtraUsage.ts  FileResource.ts  HookEntry.ts  HookSource.ts  InstalledPlugin.ts  Marketplace.ts  McpHealth.ts  McpKeyVal.ts  McpServer.ts  McpSource.ts  MemoryInfo.ts  ModelUsage.ts  Profile.ts  ProfileInput.ts  ProviderKind.ts  RateLimitTier.ts  Scope.ts  ScopeKind.ts  ScopeRef.ts  ScopeSource.ts  Session.ts  SkillSource.ts  SourceSkill.ts  UsageBucket.ts  UsageResult.ts
