[package]
name = "claude-copilot-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml is deprecated/archived; serde_norway is a maintained drop-in fork.
# Package-renamed so `use serde_yaml::…` stays unchanged across the codebase.
serde_yaml = { package = "serde_norway", version = "0.9" }
ts-rs = "12"
