[package]
name = "claude-copilot-desktop"
version = "0.1.0"
description = "Claude Copilot Desktop"
edition = "2021"

[lib]
name = "claude_copilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
chrono = { version = "0.4", default-features = false, features = ["std"] }
notify = "8"
uuid = { version = "1", features = ["v4"] }
# keyring 4 default features cover the native stores: apple-native + windows-native
# + zbus-secret-service (Linux) + the classic v1 Entry API.
keyring = "4"
claude-copilot-core = { path = "../core" }
reqwest = { version = "0.12", features = ["json", "blocking", "rustls-tls"] }
